observability/k8s/app1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-go-trace-api-1
  name: sample-go-trace-api-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-go-trace-api-1
  template:
    metadata:
      labels:
        app: sample-go-trace-api-1
    spec:
      containers:
      - image: asia-northeast1-docker.pkg.dev/masemfordev-gateway/any-containers/sample-go-trace-api:v2.0.0
        name: sample-go-trace-api
