observability/k8s/otel-collector-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otel-collector
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      serviceAccountName: otel-collector
      containers:
      - image: otel/opentelemetry-collector-contrib:0.90.1
        name: opentelemetry-collector
        args:
          - --config
          - /etc/config/otelcollector-config.yaml
        volumeMounts:
          - mountPath: /etc/config
            name: config
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: otel-collector
