observability/k8s/app2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sample-go-trace-api-2
  name: app2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample-go-trace-api-2
status:
  loadBalancer: {}
