observability/k8s/opa-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: opa
  name: opa
spec:
  ports:
  - port: 9191
    protocol: TCP
    targetPort: 9191
    name: opa
  - port: 8181
    protocol: TCP
    targetPort: 8181
    name: opa-metrics
  selector:
    app: opa
status:
  loadBalancer: {}
