observability/k8s/otel-collector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: otel-collector
  name: otel-collector
spec:
  ports:
  - port: 4317
    protocol: TCP
    targetPort: 4317
    name: otlp
  - port: 8888
    protocol: TCP
    targetPort: 8888
    name: prometheus1
  - port: 8889
    protocol: TCP
    targetPort: 8889
    name: prometheus2
  selector:
    app: otel-collector
