observability/k8s/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: envoy
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
  rules:
    - backendRefs:
        - name: envoy
          port: 51051
