observability/k8s/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
  rules:
    - backendRefs:
        - name: keycloak
          port: 8080
